# meld-release

./: Experiment.md  Experiment.zh.md  LICENSE  README.md  README.zh.md  pyproject.toml
experiments/family_ood/: run_family_ood.py
experiments/time_ood/: run_time_ood.py
scripts/: batch_convert_cape_data.py  cape_to_markdown_converter.py  compute_metrics.py  copy_correct_cape_samples.py  download_models.py  preprocess_data.py  run_experiments.py  run_rq2_layer15.sh  run_rq2_layer28.sh  verify_meld_system.sh
src/meld/: build_dataset_index.py  feature_extractor.py  holdout_family_time.py  meld_family_classifier.py  ood_eval.py  train_lec.py
